# Databricks_Pipeline

./: .gitignore  README.md
Databricks_Bundle/: Setup.py  databricks.yml  notebook copy.ipynb  pyproject.toml
Databricks_Bundle/resources/: job_manager.app.yml  my_project.job.yml  my_project.pipeline.yml  notebook.job.yml
Databricks_Bundle/scratch/: exploration.ipynb
Databricks_Bundle/src/: notebook.ipynb  pipeline.ipynb
Databricks_Bundle_old/: pyproject.toml
Databricks_Bundle_old/resources/: hello_world.job.yml
Dependencies/Pipeline/: azure-pipeline.yml  nslookup-pipeline.yml
Dependencies/Pipeline/Configuration/: Dev.variables.yml  Prod.variables.yml  app.variables.yml
Dependencies/Pipeline/Stages/: build.yml  deploy.yml  nslookup.yml
