[project]
name = "databricks_app"
version = "0.0.1"
authors = [{ name = "wiyosman@microsoft.com" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "databricks-dlt",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_app"]

[project.scripts]
main = "databricks_app.main:main"
